Fixed layour shift in register screen

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,7 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+
+.bg-gradient {
+  @apply [background:linear-gradient(180deg,rgb(1.31,84.41,105.19)_0%,rgb(41,129,149)_96.88%)]
+}
